# real-value-etl

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.md
src/etl/: datapipeline.py  extraction.py  loading.py  merging.py  transformation.py
src/utils/: checking_s3_data.py  config.py  logger.py  mapping.py  types_transform.py
