[tool.poetry]
name = "realvalueetl"
version = "0.1.0"
description = "data collection and validation"
authors = ["sergandri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pandas = "^2.2.3"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.63"
requests = "^2.32.3"
clickhouse-driver = "^0.2.9"
clickhouse-connect = "^0.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
mypy = "^1.13.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
